--- a/Dec2023/Week4/Project2/code/newsapp/package.json
+++ b/Dec2023/Week4/Project2/code/newsapp/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "author": "Alpha",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
